<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hsgallery</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- title -->
    <string name="gallery">Gallery</string>
    <string name="log">LOG</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_image_popup">Image</string>
    <string name="image">Image</string>

    <!-- simple word -->

    <string name="create_upper">CREATE</string>
    <string name="create_lower">create</string>
    <string name="create_normal">Create</string>
    <string name="wait_upper">WAIT</string>
    <string name="wait_lower">wait</string>
    <string name="wait_normal">Wait</string>
    <string name="delete_upper">DELETE</string>
    <string name="delete_lower">delete</string>
    <string name="delete_normal">Delete</string>
    <string name="confirm_upper">CONFIRM</string>
    <string name="confirm_lower">confirm</string>
    <string name="confirm_normal">Confirm</string>
    <string name="cancel_upper">CANCEL</string>
    <string name="cancel_lower">cancel</string>
    <string name="cancel_normal">Cancel</string>

    <!-- menu item -->
    <string name="menu_option">Menu Option</string>
    <string name="menu_search">Menu Search</string>
    <string name="menu_see_log">Menu log</string>
    <string name="menu_more">Menu more</string>
    <string name="copy">copy</string>
    <string name="paste">paste</string>
    <string name="move">move</string>
    <string name="delete">delete</string>
    <string name="rename">rename</string>
    <string name="relocate">relocate</string>
    <string name="edit">edit</string>
    <string name="multi_select">Multi Select</string>
    <string name="new_directory">New Directory</string>
    <string name="share_kakao">Kakao Talk</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_instagram">Instagram</string>

    <string name="view_all">View All Images</string>
    <string name="view_dir">View Directorys</string>
    <string name="view_img">View Images</string>

    <!-- edit -->
    <string name="edit_crop_16_9">16:9</string>
    <string name="edit_crop_4_3">4:3</string>
    <string name="edit_crop_1_1">1:1</string>
    <string name="edit_crop_free">free</string>
    <string name="edit_crop_circle">circle</string>

    <string name="button_ok">Ok</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_save">SAVE</string>
    <string name="button_crop">CROP</string>
    <string name="button_rotate">ROTATE</string>

    <!-- log fragment-->
    <string name="date">DATE</string>
    <string name="name">NAME</string>
    <string name="picture_id">ID</string>
    <string name="type">TYPE</string>
    <string name="title">TITLE</string>

    <string name="to_path">TO PATH</string>
    <string name="bucket_name">DIRECTORY</string>
    <string name="share">SHARE</string>
    <string name="note">NOTE</string>

    <string name="log_create">PICTURE</string>
    <string name="log_read">READ</string>
    <string name="log_update">UPDATE</string>
    <string name="log_delete">DELETE</string>
    <string name="log_all">ALL</string>

    <!-- error msg -->
    <string name="error_copy">Copy error occurred!</string>
    <string name="error_exist">Already exist</string>

    <!-- success msg -->
    <string name="success_copy">Copy success</string>
    <string name="success_export">Export success</string>

    <!-- option -->
    <string name="password">Password</string>
    <string name="delete_log">log delete</string>
    <string name="export_log">log export</string>
    <string name="exit">exit</string>
    <string name="question_delete">Really do you want to REMOVE all LOG?</string>

    <!-- success msg-->
    <plurals name="success_copy">
        <item quantity="one">One file copy</item>
        <item quantity="other">%d files copy</item>
    </plurals>

    <!-- dialog msg-->
    <plurals name="dialog_move">
        <item quantity="one">One file selected.\nChoose action.</item>
        <item quantity="other">%d files selected.\nChoose action.</item>
    </plurals>
    <plurals name="dialog_select">
        <item quantity="one">One file selected</item>
        <item quantity="other">%d files selected</item>
    </plurals>
    <string name="dialog_new_dir">New directory name</string>
    <string name="input_name">Your name is used for log export</string>
    <string name="hint_input_name">Your name</string>
    <string name="hint_nospace"></string>

    <string name="dialog_title_share">Share</string>
    <string name="dialog_content_share">Select service you share to image</string>
</resources>
