<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/ic_light_setting"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/delete"
          android:title="@string/delete"
          android:icon="@drawable/ic_delete_white_24dp"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/move"
          android:title="@string/move"
          android:icon="@drawable/ic_content_copy_white_24dp"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/multi_select"
          android:title="@string/multi_select"
          android:icon="@drawable/ic_light_edit"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/rename"
          android:title="@string/rename"
          android:icon="@drawable/ic_light_edit"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/relocate"
          android:title="@string/relocate"
          android:icon="@drawable/ic_light_edit"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/crop"
          android:title="@string/crop"
          android:icon="@drawable/ic_light_edit"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item
        android:title="@string/new_directory"
        android:id="@+id/menu_new_directory"
        android:icon="@drawable/ic_light_comment_16dp"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_more"
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_light_chevron_down"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/menu_see_log"
        android:id="@+id/menu_log"
        android:icon="@drawable/ic_light_comment_16dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>
</menu>
