<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/log_all"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/log_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/log_create"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/log_create"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/log_read"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/log_read"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/log_update"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/log_update"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/log_delete"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/log_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/date"
                    android:gravity="center"
                    android:layout_width="@dimen/log_date"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/name"
                    android:gravity="center"
                    android:layout_width="@dimen/log_name"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/title"
                    android:gravity="center"
                    android:layout_width="@dimen/log_title"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/picture_id"
                    android:gravity="center"
                    android:layout_width="@dimen/log_id"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/bucket_name"
                    android:gravity="center"
                    android:layout_width="@dimen/log_bucket"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/type"
                    android:gravity="center"
                    android:layout_width="@dimen/log_type"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/to_path"
                    android:gravity="center"
                    android:layout_width="@dimen/log_to_path"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/share"
                    android:gravity="center"
                    android:layout_width="@dimen/log_share"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/note"
                    android:gravity="center"
                    android:layout_width="@dimen/log_note"
                    android:layout_height="40dp"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/log_recycler"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>