<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/date"
            android:gravity="center"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
        <TextView
            android:text="@string/name"
            android:gravity="center"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
        <TextView
            android:text="@string/picture_id"
            android:gravity="center"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
        <TextView
            android:text="@string/type"
            android:gravity="center"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
        </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/log_recycler"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>